@@ -1,0 +1,5 @@
+	@ test ADR pseudo-op
+	.text
+	.global foo
+foo:
+	adrhi	pc, . - 0x2ffffff8
